added dashboard & fitch data from apis

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/prashantchaudhary/ddslick/master/jquery.ddslick.min.js" ></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaOQ1qVIyrLaSM819j3CxVv8OYLgJiYg4&libraries=places"></script>
     <title>Zari Falcon</title>
     
   </head>
