added plans section & fetch them

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Project created by Zari.egypt Company"
+      content="Project created by Eng/AHMED RASHED from Zari.egypt Company"
     />
     <meta name="description" content="Zari Falcon">
     <meta name="kaywords" content="Zari Falcon">
